# flight_computer_sim

./: CMakeLists.txt  README.md  main.c
app/: state_machine.h
bsp/: time_port.c  uart_port.c  uart_port.h
common/: config.h  types.h
comms/: command.c  command.h
drivers/: altimeter_sim.c  altimeter_sim.h  imu_sim.c  imu_sim.h
flight-software/: CMakeLists.txt  main.c
flight-software/app/: state_machine.c  state_machine.h
flight-software/bsp/: time_port.h  uart_port.c
flight-software/common/: config.h  types.h
flight-software/comms/: command.c  command.h
flight-software/drivers/: altimeter_sim.c  altimeter_sim.h  gps_sim.c  gps_sim.h  hk_sim.c  hk_sim.h  imu_sim.c  imu_sim.h
flight-software/services/: fault_manager.c  fault_manager.h  health_monitor.c  health_monitor.h  logger.c  telemetry.c  telemetry.h
flight-software/simulation/: geo.c  geo.h  vehicle_model.c  vehicle_model.h
flight-software/tests/: logger_stub.c  test_command.c  test_fault_manager.c  test_health_monitor.c  test_state_machine.c
ground-station/: ground_station.py  requirements.txt
ground-station/models/: telemetry.py
ground-station/parsing/: log_parser.py  telemetry_parser.py
ground-station/services/: csv_logger.py  event_logger.py  live_session.py  replay_session.py
ground-station/state/: telemetry_buffer.py
ground-station/ui/: main_window.py
ground-station/ui/renderers/: plot_renderer.py  status_renderer.py  tile_renderer.py
ground-station/ui/widgets/: plot_widget.py  status_tile.py
services/: fault_manager.c  fault_manager.h  health_monitor.c  health_monitor.h  logger.c  logger.h  telemetry.c  telemetry.h
tests/: test_command.c  test_fault_manager.c  test_health_monitor.c  test_main.c  test_state_machine.c  test_utils.h
